After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 650937 - deinterlace: fix parameter type in trace
deinterlace: fix parameter type in trace
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal blocker
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-05-24 06:24 UTC by Miguel Angel Cabrera Moya
Modified: 2011-06-15 22:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix for the bug report (1.10 KB, patch)
2011-05-24 06:26 UTC, Miguel Angel Cabrera Moya
committed Details | Review

Description Miguel Angel Cabrera Moya 2011-05-24 06:24:54 UTC
While building gst-plugins good from git i found that it doesn't build because of a wrong paramater in a trace function.
Comment 1 Miguel Angel Cabrera Moya 2011-05-24 06:26:49 UTC
Created attachment 188434 [details] [review]
Fix for the bug report
Comment 2 Sebastian Dröge (slomo) 2011-05-24 07:46:19 UTC
commit 16d71c7d96ac6a3b9a7f55f37da64011597605c4
Author: Miguel Angel Cabrera Moya <madmac2501@gmail.com>
Date:   Mon May 23 02:46:38 2011 -0700

    deinterlace: fix parameter type in trace
    
    https://bugzilla.gnome.org/show_bug.cgi?id=650937