deinterlace: fix parameter type in trace

https://bugzilla.gnome.org/show_bug.cgi?id=650937